# file_query

./: .gitignore  pyproject.toml  release-notes.txt
file_query_text/: main.py
src/: cli.py  grammar.py  main.py
tests/: test_main.py
