[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-query"
version = "0.1.0"
description = "SQL-like interface for querying files in your filesystem"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyparsing>=3.2.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/file-query"
"Bug Tracker" = "https://github.com/yourusername/file-query/issues"

[project.scripts]
fq = "file_query.cli:main"

[tool.setuptools]
packages = ["file_query"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]
